--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -55,8 +55,12 @@
 # USB keyboard
 # ============
 
-# simple screen lock
-"mpc disable 2 ; mpc stop ; sleep 1 ; xset dpms force off ; xtrlock ; mpc enable 2"
+# disable button over backspace
+"true"
+    XF86HomePage
+
+# simple screen lock + quick and ugly keyboard fix
+"mpc disable 2 ; mpc stop ; sleep 1 ; xset dpms force off ; xtrlock ; mpc enable 2 ; setxkbmap -model evdev -layout plantoni"
     XF86Sleep
 
 # suspend 2 ram
