--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -29,7 +29,7 @@
 # =================
 
 # simple screen lock
-"mpc disable 2 & mpc stop & purple-remote setstatus?status=away & xscreensaver-command -lock ; mpc enable 2"
+"mpc disable 2 & mpc stop & purple-remote setstatus?status=away & xscreensaver-command -lock ; purple-remote setstatus?status=avaiable ; mpc enable 2"
     XF86Launch1
 
 # mpd
@@ -60,7 +60,7 @@
     XF86HomePage
 
 # simple screen lock
-"mpc disable 2 & mpc stop & purple-remote setstatus?status=away & xscreensaver-command -lock ; mpc enable 2"
+"mpc disable 2 & mpc stop & purple-remote setstatus?status=away & xscreensaver-command -lock ; purple-remote setstatus?status=avaiable ; mpc enable 2"
     XF86Sleep
 
 # suspend 2 ram
