--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -10,12 +10,6 @@
 "urxvtc-wrapper.sh"
      Alt + grave
 
-# volume
-"pa-volume-ctl.sh down"
-    XF86AudioMute #XF86AudioLowerVolume
-"pa-volume-ctl.sh up"
-    XF86AudioRaiseVolume
-
 # file manager
 "thunar"
     Mod4 + f
@@ -23,14 +17,20 @@
 # scrot with auto-optipng
 "/home/lidel/bin/scrot"
     Mod4 + Print
-
-
-# Notebook keyboard
-# =================
-
+#
 # simple screen lock
 "mpc disable 2 & mpc stop & xscreensaver-command -lock ; mpc enable 2"
-    XF86Launch1
+    XF86Sleep
+
+# suspend 2 ram
+"xtrlock & mpc stop & /home/lidel/cl/bin/vaio-s2ram.sh"
+    Mod4 + XF86Sleep
+
+# volume
+"pa-volume-ctl.sh down"
+    XF86AudioLowerVolume
+"pa-volume-ctl.sh up"
+    XF86AudioRaiseVolume
 
 # mpd
 "mpc prev"
@@ -42,41 +42,17 @@
 "mpc next"
     XF86AudioNext
 
+# Notebook keyboard
+# =================
+#
+
+# simple screen lock
+"mpc disable 2 & mpc stop & xscreensaver-command -lock ; mpc enable 2"
+    XF86Launch1
+
 # notebook backlight
 "sudo /home/lidel/bin/vaio-fw21e-backlight2.sh up"
     XF86MonBrightnessUp
 "sudo /home/lidel/bin/vaio-fw21e-backlight2.sh down"
     XF86MonBrightnessDown
 
-"xtrlock & mpc stop & /home/lidel/cl/bin/vaio-s2ram.sh"
-    Mod4 + XF86AudioMedia
-
-
-# USB keyboard
-# ============
-
-# disable button over backspace
-"true"
-    XF86HomePage
-
-# simple screen lock
-"mpc disable 2 & mpc stop & xscreensaver-command -lock ; mpc enable 2"
-    XF86Sleep
-
-# suspend 2 ram
-"xtrlock & mpc stop & /home/lidel/cl/bin/vaio-s2ram.sh"
-    Mod4 + XF86Sleep
-
-# mpd
-"mpc prev"
-    KP_Left
-"mpc toggle"
-    KP_Begin
-"mpc stop"
-    KP_Down
-"mpc next"
-    KP_Right
-
-# better key volume down
-"pa-volume-ctl.sh down"
-    XF86AudioMute #XF86AudioLowerVolume
