--- a/.xmobarrc
+++ b/.xmobarrc
@@ -1,19 +1,20 @@
 Config { font = "-*-terminus-medium-r-*-*-12-*-*-*-*-*-iso10646-*"
-       , bgColor = "#000000"
-       , fgColor = "#808080"
+       , bgColor = "#000"
+       , fgColor = "#999"
        , position = TopW L 100
        , lowerOnStart = True
-       , commands = [ Run Cpu ["-t","<total>","-L","30","-H","80","-n","#04797B","-h","#A36666","-l","#808080"] 20
-                    , Run Memory ["-t","<usedratio>%","-L","50","-H","75","-n","#04797B","-h","#A36666","-l","#808080"] 20
-                    , Run Date "%H:%M:%S" "date" 10
-                    , Run Thermal "TZ00" ["-t","<temp>"] 100
-                    , Run CpuFreq ["-t","<cpu0> <cpu1>","-L","0","-l","lightblue"] 10
+       , commands = [ Run MultiCpu ["-t", "<total><fc=#666>%</fc>", "-L", "25", "-H", "75", "-n", "#ac9", "-h", "#ca9"] 10
+                    , Run CpuFreq ["-t", "<cpu0>", "-L", "0", "-l", "lightblue"] 100
+                    , Run CoreTemp ["-t", "<core0><fc=#666>°</fc>", "-L", "40", "-H", "60", "-n", "#ac9", "-h", "#ca9"] 100
+                    , Run Memory ["-t", "<usedratio><fc=#666>%</fc>", "-L", "50", "-H", "75", "-n", "#ac9", "-h", "#ca9", "-l", "#888"] 20
+                    , Run Network "wlan0" ["-t", "<rx><fc=#666>KiB</fc><fc=#444>/</fc><tx><fc=#666>KiB</fc>", "-L", "10", "-H", "100", "--normal", "#ac9", "--high", "#ca9"] 10
+                    , Run Date "%H<fc=#666>:</fc>%M<fc=#666>:%S</fc>" "date" 10
                     , Run PipeReader ".vol" "volume"
                     , Run Com "cut -d' ' -f 1-3 /proc/loadavg" [] "load" 50
-                    , Run Com "(mpc | grep -) || echo" [] "mpd" 50
+                    , Run MPD ["-t", "<composer> <artist> <fc=#666>–</fc> <title> <fc=#666>[</fc><statei><fc=#666>] <bar></fc> <lapsed><fc=#666>/<length></fc>", "--", "-P", "<fc=#ac9>♫</fc>", "-Z", "<fc=#ca9>#</fc>", "-S", " "] 5
                     , Run StdinReader
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = " %StdinReader% }{ %mpd% <fc=#404040>:</fc> %cpufreq% <fc=#404040>@</fc> %cpu% <fc=#404040>:</fc> %TZ00%<fc=#404040>°C :</fc> %memory% <fc=#404040>:</fc> %volume% <fc=#404040>♫ :</fc> %load% <fc=#404040>:</fc> %date%               "
+       , template = " %StdinReader% }{ %mpd% <fc=#555>:</fc> %volume%<fc=#555>♫ :</fc> %wlan0% <fc=#555>:</fc> %memory% <fc=#555>:</fc> %cpufreq% <fc=#555>@</fc> %multicpu% <fc=#555>@</fc> %coretemp% <fc=#555>:</fc> %load% <fc=#555>:</fc> %date%               "
        }
