--- a/.xmobarrc
+++ b/.xmobarrc
@@ -8,7 +8,7 @@ Config { font = "-*-terminus-medium-r-*-*-12-*-*-*-*-*-iso10646-*"
                     , Run CoreTemp ["-t", "<core0><fc=#666>/</fc><core1><fc=#666>°</fc>", "-L", "40", "-H", "60", "-n", "#ac9", "-h", "#ca9"] 100
                     , Run Memory ["-t", "<usedratio><fc=#666>%</fc>", "-L", "50", "-H", "75", "-n", "#ac9", "-h", "#ca9", "-l", "#888"] 20
                     , Run Network "wlan0" ["-t", "<rx><fc=#666>KiB</fc><fc=#444>/</fc><tx><fc=#666>KiB</fc>", "-L", "10", "-H", "100", "--normal", "#ac9", "--high", "#ca9"] 10
-                    , Run Date "%H<fc=#666>:</fc>%M<fc=#666>:%S</fc>" "date" 10
+                    , Run Date "<fc=#666>%Y-%m-%d</fc> %H<fc=#666>:</fc>%M<fc=#666>:%S</fc>" "date" 10
                     , Run PipeReader ".vol" "volume"
                     , Run Com "cut -d' ' -f 1-3 /proc/loadavg" [] "load" 50
                     , Run MPD ["-t", "<artist> <fc=#666>–</fc> <title> <fc=#666>[</fc><statei><fc=#666>] <bar></fc> <lapsed><fc=#666>/<length></fc>", "--", "-P", "<fc=#ac9>♫</fc>", "-Z", "<fc=#ca9>#</fc>", "-S", " "] 5
