--- a/.xmobarrc
+++ b/.xmobarrc
@@ -5,16 +5,18 @@ Config { font = "-*-terminus-medium-r-*-*-12-*-*-*-*-*-iso10646-*"
        , lowerOnStart = True
        , commands = [ Run MultiCpu ["-t", "<total0><fc=#666>/</fc><total1><fc=#666>%</fc>", "-p", "2", "-L", "25", "-H", "75", "-n", "#ac9", "-h", "#ca9"] 10
                     , Run CpuFreq ["-t", "<cpu0><fc=#666>/</fc><cpu1>", "-L", "0", "-l", "lightblue"] 100
-                    , Run CoreTemp ["-t", "<core0><fc=#666>/</fc><core1><fc=#666>°</fc>", "-L", "40", "-H", "60", "-n", "#ac9", "-h", "#ca9"] 100
+                    , Run CoreTemp ["-t", "<core0><fc=#666>/</fc><core1><fc=#666>°</fc>", "-L", "55", "-H", "60", "-n", "#ac9", "-h", "#ca9"] 100
                     , Run Memory ["-t", "<usedratio><fc=#666>%</fc>", "-L", "50", "-H", "75", "-n", "#ac9", "-h", "#ca9", "-l", "#888"] 20
                     , Run Network "wlan0" ["-t", "<rx><fc=#666>KiB</fc><fc=#444>/</fc><tx><fc=#666>KiB</fc>", "-L", "10", "-H", "100", "--normal", "#ac9", "--high", "#ca9"] 10
+                    -- , Run Network "usb0" ["-t", "<rx><fc=#666>KiB</fc><fc=#444>/</fc><tx><fc=#666>KiB</fc>", "-L", "10", "-H", "100", "--normal", "#ac9", "--high", "#ca9"] 10
+                    -- color in next xmobar version , Run Volume "default" "Master" ["-t", "<volume><status>", "-O", "<fc=#ac9>♫</fc>", "-o", "<fc=#ca9>#</fc>"] 10
+                    , Run Volume "default" "Master" ["-t", "<volume><fc=#555>♫</fc>"] 10
                     , Run Date "<fc=#666>%Y-%m-%d</fc> %H<fc=#666>:</fc>%M<fc=#666>:%S</fc>" "date" 10
-                    , Run PipeReader ".vol" "volume"
                     , Run Com "cut -d' ' -f 1-3 /proc/loadavg" [] "load" 50
                     , Run MPD ["-t", "<artist> <fc=#666>–</fc> <title> <fc=#666>[</fc><statei><fc=#666>] <bar></fc> <lapsed><fc=#666>/<length></fc>", "--", "-P", "<fc=#ac9>♫</fc>", "-Z", "<fc=#ca9>#</fc>", "-S", " "] 5
                     , Run StdinReader
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = " %StdinReader% }{ %mpd% <fc=#555>:</fc> %volume%<fc=#555>♫ :</fc> %wlan0% <fc=#555>:</fc> %cpufreq% <fc=#555>@</fc> %multicpu% <fc=#555>@</fc> %coretemp% <fc=#555>:</fc> %memory% <fc=#555>:</fc> %load% <fc=#555>:</fc> %date%               "
+       , template = " %StdinReader% }{ %mpd% <fc=#555>:</fc> %default:Master% <fc=#555>:</fc> %wlan0% <fc=#555>:</fc> %cpufreq% <fc=#555>@</fc> %multicpu% <fc=#555>@</fc> %coretemp% <fc=#555>:</fc> %memory% <fc=#555>:</fc> %load% <fc=#555>:</fc> %date%               "
        }
