zshrc: added rrr / updated tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,10 +8,13 @@ set-option -g set-titles-string "#H / #S"
 
 setw -g automatic-rename
 
-set-option -g status-utf8 on
-set-option -g status-justify left
-set-option -g status-left-length 40
 
+# force a reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf
+
+# start window numbering at 1 for easier switching
+set -g base-index 1
 
 # Activate mouse support
 # https://gist.github.com/1297707
@@ -26,6 +29,24 @@ set-option -g mouse-select-window on
 # pgup/down fix
 set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
+
+# quick pane cycling
+unbind ^A
+bind ^A select-pane -t :.+
+
+# unicode
+setw -g utf8 on
+set -g status-utf8 on
+
+# statusbar
+set -g status-left "#h:[#S]"
+set-option -g status-justify left
+set-option -g status-left-length 50
+
+set -g status-right-length 50
+set -g status-right "%H:%M %F"
+
+setw -g window-status-current-format "|#I:#W|"
 
 # colors
 set -g default-terminal "screen-256color"
