various tweaks from past months

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,10 +51,10 @@ setw -g window-status-current-format "|#I:#W|"
 # colors
 set -g default-terminal "screen-256color"
 set-option -g status-bg default
-set-option -g status-fg cyan
+set-option -g status-fg colet-window-option -g window-status-current-fg cyanur240
 
-set-window-option -g window-status-current-attr bold
-set-window-option -g window-status-current-fg white
+#set-window-option -g window-status-current-attr bold
+set-window-option -g window-status-current-fg cyan
 
 #set-window-option -g window-status-alert-attr none
 #set-window-option -g window-status-alert-fg black
