--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,13 +8,10 @@ set-option -g set-titles-string "#H / #S"
 
 setw -g automatic-rename
 
+set-option -g status-utf8 on
+set-option -g status-justify left
+set-option -g status-left-length 40
 
-# force a reload of the config file
-unbind r
-bind r source-file ~/.tmux.conf
-
-# start window numbering at 1 for easier switching
-set -g base-index 1
 
 # Activate mouse support
 # https://gist.github.com/1297707
@@ -30,31 +27,13 @@ set-option -g mouse-select-window on
 set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 
-# quick pane cycling
-unbind ^A
-bind ^A select-pane -t :.+
-
-# unicode
-setw -g utf8 on
-set -g status-utf8 on
-
-# statusbar
-set -g status-left "#h:[#S]"
-set-option -g status-justify left
-set-option -g status-left-length 50
-
-set -g status-right-length 50
-set -g status-right "%H:%M %F"
-
-setw -g window-status-current-format "|#I:#W|"
-
 # colors
 set -g default-terminal "screen-256color"
 set-option -g status-bg default
-set-option -g status-fg colet-window-option -g window-status-current-fg cyanur240
+set-option -g status-fg cyan
 
-#set-window-option -g window-status-current-attr bold
-set-window-option -g window-status-current-fg cyan
+set-window-option -g window-status-current-attr bold
+set-window-option -g window-status-current-fg white
 
 #set-window-option -g window-status-alert-attr none
 #set-window-option -g window-status-alert-fg black
@@ -63,8 +42,5 @@ set-window-option -g window-status-current-fg cyan
 # pane border
 set-option -g pane-border-fg colour235 #base02
 set-option -g pane-active-border-fg colour240 #base01
-
-
-
 
 
