--- a/.i3/config
+++ b/.i3/config
@@ -207,4 +207,7 @@ for_window [class="Firefox" instance="Navigator"] border none
 for_window [class="Firefox" instance="^(?!Navigator$)"] floating enable, border normal
 # other floats
 for_window [class="pinentry"] floating enable, border normal
+for_window [window_role="pop-up"] floating enable, border normal
+for_window [window_role="task_dialog"] floating enable, border normal
+for_window [title="Preferences$"] floating enable, border normal
 
