Minor updates from 2015

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,11 +12,13 @@ set-option -g status-utf8 on
 set-option -g status-justify left
 set-option -g status-left-length 40
 
+# Activate mouse support (tmux >= 2.1)
+set-option -g mouse on
 
-# Activate mouse support
+# Activate mouse support (tmux < 2.1)
 # https://gist.github.com/1297707
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
+#set-option -g mouse-select-pane on
+#set-option -g mouse-select-window on
 #set-window-option -g mode-mouse on
 # To be able to resize panes with the mouse
 # http://unix.stackexchange.com/questions/11325/automatically-adjust-window-width-in-tmux
