--- a/.i3/config
+++ b/.i3/config
@@ -183,8 +183,14 @@ workspace_auto_back_and_forth yes
 new_window 1pixel
 new_float  1pixel
 
+# The "smart" setting hides borders on workspaces with only one window visible,
+# but keeps them on workspaces with multiple windows visible.
+hide_edge_borders smart
+
 # Border changing (to see title when needed)
 bindsym $mod+b border toggle
+
+
 
 # Colors
 #                         border  bg      text    indicator
