.tmux.conf: copy-mode-vi
https://sanctum.geek.nz/arabesque/vi-mode-in-tmux/

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,12 +8,15 @@ set-option -g set-titles-string "#H / #S"
 
 setw -g automatic-rename
 
-set-option -g status-utf8 on
+#set-option -g status-utf8 on
 set-option -g status-justify left
 set-option -g status-left-length 40
 
 # Activate mouse support (tmux >= 2.1)
 set-option -g mouse on
+
+# Vim copy mode
+set-window-option -g mode-keys vi
 
 # Activate mouse support (tmux < 2.1)
 # https://gist.github.com/1297707
