--- a/.xbindkeysrc
+++ b/.xbindkeysrc
@@ -16,6 +16,19 @@
 "pa-volume-ctl.sh mute"
     XF86AudioMute
 
+# Matebook X
+"backlight-ctl.sh dec"
+   Mod4 + F1
+"backlight-ctl.sh inc"
+   Mod4 + F2
+"pa-volume-ctl.sh mute"
+   Mod4 + F4
+"pa-volume-ctl.sh down"
+   Mod4 + F5
+"pa-volume-ctl.sh up"
+   Mod4 + F6
+
+
 # MPD
 "mpc toggle"
     XF86AudioPlay
