--- a/.i3/config
+++ b/.i3/config
@@ -226,3 +226,4 @@ for_window [class="pinentry"] floating enable, border normal
 for_window [title="Preferences$"] floating enable, border normal
 for_window [class="zoom"] floating enable, border normal
 for_window [class="Peek"] floating enable, border normal
+for_window [class="flameshot"] floating enable, border normal
